--- a/lib-common/src/main/res/values/colors.xml
+++ b/lib-common/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="underLineActiLogin">#828181</color>
+    <color name="underLineNorLogin">#C9C8C8</color>
+    <color name="underLineActiRegister">#828181</color>
+    <color name="underLineNorRegister">#C9C8C8</color>
 </resources>
