--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,7 +87,7 @@
         android:layout_marginStart="49dp"
         android:layout_marginEnd="54dp"
         android:layout_marginTop="10dp">
-        <com.swu.smartcanteen.widget.ClearInputTextView
+        <com.swu.smartcanteen.widget.VerifyCodeInputTextView
             android:id="@+id/verify_code"
             android:layout_width="match_parent"
             android:layout_height="40dp"
