--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,151 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.HomeFragment"
-    >
+    tools:context=".fragment.HomeFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        >
+        android:fitsSystemWindows="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/food_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_layout"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:background="@drawable/home_select_board_bg"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:layout_marginTop="-43dp">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/take_out"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:statusBarScrim="@android:color/transparent"
-            app:titleEnabled="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            android:layout_height="133dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="21dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="@drawable/home_card_selecter_fore"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="4dp">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/food_bg"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.6"
-               />
+                android:layout_width="80dp"
+                android:layout_height="59dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="33dp"
+                android:src="@drawable/take_out" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.AppBarOverlay" />
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="20dp"
+                android:gravity="center"
+                android:text="@string/take_out"
+                android:textSize="40sp" />
+        </androidx.cardview.widget.CardView>
 
-    </com.google.android.material.appbar.AppBarLayout>
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/pre_order"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/home_select_board_bg"
-            >
+            android:layout_height="133dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="21dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="@drawable/home_card_selecter_fore"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="4dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/take_out"
-                android:layout_width="match_parent"
-                android:layout_height="133dp"
-                android:layout_marginEnd="21dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="40dp"
-                app:cardCornerRadius="30dp"
-                app:cardElevation="4dp"
-                android:clickable="true"
-                android:foreground="@drawable/home_card_selecter_fore"
-                android:focusable="true">
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="59dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="33dp"
+                android:src="@drawable/pre_order" />
 
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="59dp"
-                    android:layout_marginStart="22dp"
-                    android:layout_marginTop="33dp"
-                    android:src="@drawable/take_out" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="20dp"
+                android:gravity="center"
+                android:text="@string/pre_order"
+                android:textSize="40sp" />
+        </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:layout_marginEnd="20dp"
-                    android:gravity="center"
-                    android:text="@string/take_out"
-                    android:textSize="40sp" />
-            </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/in_canteen"
+            android:layout_width="match_parent"
+            android:layout_height="133dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="21dp"
+            android:layout_marginBottom="40dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="@drawable/home_card_selecter_fore"
+            app:cardCornerRadius="30dp"
+            app:cardElevation="4dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/pre_order"
-                android:layout_width="match_parent"
-                android:layout_height="133dp"
-                android:layout_marginEnd="21dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="30dp"
-                app:cardCornerRadius="30dp"
-                app:cardElevation="4dp"
-                android:clickable="true"
-                android:foreground="@drawable/home_card_selecter_fore"
-                android:focusable="true"
-                >
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="59dp"
-                    android:src="@drawable/pre_order"
-                    android:layout_marginTop="33dp"
-                    android:layout_marginStart="22dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/pre_order"
-                    android:textSize="40sp"
-                    android:gravity="center"
-                    />
-            </androidx.cardview.widget.CardView>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="59dp"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="33dp"
+                android:src="@drawable/in_canteen" />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/in_canteen"
-                android:layout_width="match_parent"
-                android:layout_height="133dp"
-                android:layout_marginEnd="21dp"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="40dp"
-                app:cardCornerRadius="30dp"
-                app:cardElevation="4dp"
-                android:clickable="true"
-                android:foreground="@drawable/home_card_selecter_fore"
-                android:focusable="true"
-                >
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="59dp"
-                    android:src="@drawable/in_canteen"
-                    android:layout_marginTop="33dp"
-                    android:layout_marginStart="22dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|end"
-                    android:layout_marginEnd="20dp"
-                    android:text="@string/in_canteen"
-                    android:textSize="40sp"
-                    android:gravity="center"
-                    />
-            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="20dp"
+                android:gravity="center"
+                android:text="@string/in_canteen"
+                android:textSize="40sp" />
+        </androidx.cardview.widget.CardView>
 
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </LinearLayout>
 
-
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
