增加了“我的”页面，和设置头像功能
头像保存到本地待完善

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/home_select_board_bg"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
