--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,67 +33,81 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/take_out"
             android:layout_width="match_parent"
-            android:layout_height="133dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="21dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="21dp"
             android:clickable="true"
             android:focusable="true"
             android:foreground="@drawable/home_card_selecter_fore"
-            app:cardCornerRadius="30dp"
+            app:cardCornerRadius="15dp"
             app:cardElevation="4dp">
 
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="59dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="33dp"
-                android:src="@drawable/take_out" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginEnd="26dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/take_out" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:layout_marginEnd="20dp"
-                android:gravity="center"
-                android:text="@string/take_out"
-                android:textSize="40sp" />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2.7"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/take_out_text" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/pre_order"
             android:layout_width="match_parent"
-            android:layout_height="133dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="21dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="21dp"
             android:clickable="true"
             android:focusable="true"
             android:foreground="@drawable/home_card_selecter_fore"
-            app:cardCornerRadius="30dp"
+            app:cardCornerRadius="15dp"
             app:cardElevation="4dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginEnd="26dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/pre_order" />
 
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="59dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="33dp"
-                android:src="@drawable/pre_order" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:layout_marginEnd="20dp"
-                android:gravity="center"
-                android:text="@string/pre_order"
-                android:textSize="40sp" />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2.7"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/pre_order_text" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/in_canteen"
             android:layout_width="match_parent"
-            android:layout_height="133dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginStart="21dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="21dp"
@@ -101,24 +115,30 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="@drawable/home_card_selecter_fore"
-            app:cardCornerRadius="30dp"
+            app:cardCornerRadius="15dp"
             app:cardElevation="4dp">
 
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="59dp"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="33dp"
-                android:src="@drawable/in_canteen" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="22dp"
+                    android:layout_marginEnd="26dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/in_canteen" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:layout_marginEnd="20dp"
-                android:gravity="center"
-                android:text="@string/in_canteen"
-                android:textSize="40sp" />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2.7"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/in_canteen_text" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
