add [购物车页面、fragment工具] fix [底部导航栏间隙bug、设置页面不可旋转]

--- a/module_order/src/main/res/layout/activity_choose_food.xml
+++ b/module_order/src/main/res/layout/activity_choose_food.xml
@@ -74,6 +74,11 @@
                 android:layout_weight="3.5"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
