--- a/lib-common/src/main/res/values/colors.xml
+++ b/lib-common/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="grey2">#D8D8D8</color>
     <color name="grey">#9E9E9E</color>
     <color name="blue">#4D94FF</color>
+    <color name="line">#30999999</color>
 <!--    <color name="white">#FFFFFFFF</color>-->
 <!--    <color name="white">#FFFFFFFF</color>-->
 
