--- a/module_order/src/main/res/layout/activity_choose_food.xml
+++ b/module_order/src/main/res/layout/activity_choose_food.xml
@@ -78,7 +78,7 @@
         android:id="@+id/fragment_container"
         android:layout_gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="500dp"/>
+        android:layout_height="match_parent"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
