--- a/module_order/src/main/res/layout/item_buyingcar_layout.xml
+++ b/module_order/src/main/res/layout/item_buyingcar_layout.xml
@@ -4,9 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="3dp">
 
-    <ImageView
+    <com.common.selfview.MyCircleImage
         android:id="@+id/item_food_img"
         android:layout_width="82dp"
         android:layout_height="82dp"
