--- a/module_order/src/main/res/layout/fragment_search.xml
+++ b/module_order/src/main/res/layout/fragment_search.xml
@@ -4,22 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.SearchFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
-       android:orientation="horizontal">
+       android:layout_marginTop="10dp"
+       android:orientation="horizontal"
+       >
         <ImageView
+            android:id="@+id/iv_back"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/back_arrow_24"/>
        <EditText
+           android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="30dp"
-           android:layout_weight="7.5"/>
+           android:layout_weight="7.5"
+           android:drawableStart="@drawable/ic_baseline_search_24"
+           android:background="@drawable/top_search_title_bg"/>
        <TextView
+           android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
@@ -27,4 +35,83 @@
            android:gravity="center"
            />
    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="热门搜索"
+        android:paddingStart="5dp"
+        tools:ignore="RtlSymmetry" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey"
+        android:layout_marginTop="10dp"/>
+    <com.zhy.view.flowlayout.FlowLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="6dp"
+        android:paddingTop="6dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="绕记小食堂"
+            android:background="@drawable/search_flow_tv_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="张吉记砂锅饭"
+            android:background="@drawable/search_flow_tv_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="前门陶香鸡"
+            android:background="@drawable/search_flow_tv_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="前门陶香鸡"
+            android:background="@drawable/search_flow_tv_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="前门陶香鸡"
+            android:background="@drawable/search_flow_tv_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="前门陶香鸡"
+            android:background="@drawable/search_flow_tv_bg"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="6dp"
+            android:padding="3dp"
+            android:text="前门陶香鸡"
+            android:background="@drawable/search_flow_tv_bg"/>
+    </com.zhy.view.flowlayout.FlowLayout>
 </LinearLayout>
