--- a/lib-common/src/main/res/anim/page_from_right_to_left_in.xml
+++ b/lib-common/src/main/res/anim/page_from_right_to_left_in.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromYDelta="0"
-    android:toYDelta="100%p"
-    android:duration="250">
-
+    android:fromXDelta="100%p"
+    android:toXDelta="0"
+    android:duration="150">
 </translate>
