--- a/module_order/src/main/res/layout/fragment_buy_car_bottom.xml
+++ b/module_order/src/main/res/layout/fragment_buy_car_bottom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.swu.module_order.widget.BottomBarView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +11,9 @@
     android:orientation="horizontal"
     tools:context=".fragment.BuyCarBottomFragment">
     <LinearLayout
+        android:focusable="true"
+        android:clickable="true"
+        android:id="@+id/check_select_list"
         android:layout_width="0dp"
         android:layout_weight="3"
         android:background="@drawable/buyingcar_shape_left_floating_bottom"
@@ -40,6 +44,9 @@
     </LinearLayout>
 
     <TextView
+        android:focusable="true"
+        android:clickable="true"
+        android:id="@+id/go_pay"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -50,4 +57,4 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-</LinearLayout>
+</com.swu.module_order.widget.BottomBarView>
