--- a/module_person/src/main/res/layout/fragment_top_bar.xml
+++ b/module_person/src/main/res/layout/fragment_top_bar.xml
@@ -3,25 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:orientation="horizontal"
-    android:paddingBottom="1dp"
     android:paddingTop="1dp"
+    android:paddingBottom="1dp"
     tools:context="com.example.module_person.widget.TopBarFragment">
 
     <ImageButton
-        android:src="@drawable/top_back2"
         android:id="@+id/ib_back"
         android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:background="@null"
+        android:src="@drawable/top_back2" />
 
     <TextView
         android:id="@+id/tv_message"
-        android:layout_marginStart="10dp"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:text="个人资料"
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:gravity="center_vertical"
+        android:text="个人资料"
+        android:textColor="@color/black"
+        android:textSize="24sp" />
 
 </LinearLayout>
