--- a/module_person/src/main/res/layout/fragment_person_data.xml
+++ b/module_person/src/main/res/layout/fragment_person_data.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.module_person.dataFragment.PersonDataFragment">
+    tools:context="com.example.module_person.fragment.PersonDataFragment">
 
     <LinearLayout
         android:paddingTop="30dp"
