实现了消息页面的跳转，新增UIActivity

--- a/module_person/src/main/res/layout/fragment_message.xml
+++ b/module_person/src/main/res/layout/fragment_message.xml
@@ -4,21 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.module_person.fragment.MessageFragment"
-    android:orientation="vertical">
+    tools:context="com.example.module_person.uifragment.MessageFragment"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
     <com.common.selfview.MyTitleBar
-        android:id="@+id/message_titlebar"
+        android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        app:texttitle="消息中心"
         app:is_head_back="true"
+        app:texttitle="消息中心"
         />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_message_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/message_titlebar"
+        android:layout_below="@id/titleBar"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
