--- a/module_order/src/main/res/layout/fragment_choose_food.xml
+++ b/module_order/src/main/res/layout/fragment_choose_food.xml
@@ -18,11 +18,17 @@
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:paddingLeft="3dp"
+                android:paddingRight="1dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
                 android:src="@drawable/back_arrow_24"/>
             <TextView
                 android:layout_width="0dp"
