--- a/module_person/src/main/res/layout/fragment_detail_message.xml
+++ b/module_person/src/main/res/layout/fragment_detail_message.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.module_person.fragment.DetailMessageFragment">
+    tools:context="com.example.module_person.uifragment.DetailMessageFragment">
     <com.common.selfview.MyTitleBar
-        android:id="@+id/detail_message_titlebar"
+        android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:texttitle="消息详情" />
@@ -16,7 +16,7 @@
         android:paddingStart="10dp"
         tools:ignore="RtlSymmetry"
         android:layout_alignParentBottom="true"
-        android:layout_below="@id/detail_message_titlebar">
+        android:layout_below="@id/titleBar">
 
         <LinearLayout
             android:layout_width="match_parent"
