--- a/module_person/src/main/res/layout/fragment_address_list.xml
+++ b/module_person/src/main/res/layout/fragment_address_list.xml
@@ -6,11 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.module_person.dataFragment.AddressListFragment">
 
+    <com.common.selfview.MyTitleBar
+        android:id="@+id/bt_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:texttitle="@string/top_person_set_address"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/bt_back">
 
         <LinearLayout
             android:layout_width="match_parent"
