--- a/module_person/src/main/res/layout/fragment_person_data.xml
+++ b/module_person/src/main/res/layout/fragment_person_data.xml
@@ -6,18 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.example.module_person.dataFragment.PersonDataFragment">
 
+    <com.common.selfview.MyTitleBar
+        android:id="@+id/bt_back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:texttitle="@string/top_person_data"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
-        android:paddingTop="30dp"
-        android:paddingBottom="40dp"
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
+        android:paddingTop="30dp"
+        android:paddingBottom="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/bt_back">
 
         <com.common.selfview.MyCircleImage
             android:id="@+id/data_icon"
