完善选菜页面UI

--- a/module_order/src/main/res/layout/fragment_food_detail.xml
+++ b/module_order/src/main/res/layout/fragment_food_detail.xml
@@ -92,7 +92,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tag_container" />
 
             <TextView
-                android:id="@+id/tv_price"
+                android:id="@+id/tv_final_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
@@ -115,7 +115,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_price" />
+                app:layout_constraintTop_toTopOf="@+id/tv_final_price" />
 
             <Button
                 android:id="@+id/choose_btn"
