--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -7,7 +7,7 @@
     tools:context=".fragment.OrderFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_final_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OrderFragment"
