--- a/module_order/src/main/res/drawable/bottom_cart_top_round_bg.xml
+++ b/module_order/src/main/res/drawable/bottom_cart_top_round_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="60dp"/>
-    <solid android:color="@color/go_pay_black"/>
-
+        android:topLeftRadius="8dp"
+        android:topRightRadius="8dp"/>
+    <solid android:color="@color/white"/>
 </shape>
