--- a/module_order/src/main/res/layout/activity_search.xml
+++ b/module_order/src/main/res/layout/activity_search.xml
@@ -3,38 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SearchFragment"
+    tools:context=".SearchActivity"
     android:orientation="vertical"
     android:background="@color/white">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="30dp"
-       android:layout_marginTop="10dp"
-       android:orientation="horizontal"
-       >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        >
         <ImageView
             android:id="@+id/iv_back"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:src="@drawable/back_down_arrow_24"/>
-       <EditText
-           android:id="@+id/et_search"
-           android:layout_width="0dp"
-           android:layout_height="30dp"
-           android:layout_weight="7.5"
-           android:drawableStart="@drawable/ic_baseline_search_24"
-           android:background="@drawable/top_search_title_bg"/>
-       <TextView
-           android:id="@+id/tv_search"
-           android:layout_width="0dp"
-           android:layout_height="match_parent"
-           android:layout_weight="1"
-           android:text="搜索"
-           android:gravity="center"
-           />
-   </LinearLayout>
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="7.5"
+            android:drawableStart="@drawable/ic_baseline_search_24"
+            android:background="@drawable/top_search_title_bg"/>
+        <TextView
+            android:id="@+id/tv_search"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="搜索"
+            android:gravity="center"
+            />
+    </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
