--- a/module_order/src/main/res/layout/fragment_choose_food.xml
+++ b/module_order/src/main/res/layout/fragment_choose_food.xml
@@ -25,6 +25,7 @@
                 android:layout_weight="1"
                 android:src="@drawable/back_arrow_24"/>
             <TextView
+                android:id="@+id/tv_search"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="7.5"
