--- a/module_order/src/main/res/values/color.xml
+++ b/module_order/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="rv_left_bg_not_selected">#FFD8D8D8</color>
+    <color name="transparent">#00000000</color>
 </resources>
