--- a/module_person/src/main/res/layout/activity_u_i.xml
+++ b/module_person/src/main/res/layout/activity_u_i.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.module_person.UIActivity">
     <FrameLayout
-        android:id="@+id/ui_content_container"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
