--- a/module_order/src/main/res/layout/activity_search.xml
+++ b/module_order/src/main/res/layout/activity_search.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".SearchActivity"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:id="@+id/container">
 
     <LinearLayout
         android:layout_width="match_parent"
