--- a/module_order/src/main/res/layout/bottom_shop_cart_detail.xml
+++ b/module_order/src/main/res/layout/bottom_shop_cart_detail.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <com.swu.module_order.widget.BottomShopCartLayout
+        android:id="@+id/shop_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
