--- a/module_order/src/main/res/layout/fragment_choose_food.xml
+++ b/module_order/src/main/res/layout/fragment_choose_food.xml
@@ -6,7 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:overScrollMode="never"
-    tools:context=".fragment.ChooseFoodFragment">
+    tools:context=".fragment.ChooseFoodFragment"
+    android:id="@+id/container">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
